添加上下一张及自动轮播

--- a/slide.html
+++ b/slide.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="window">
+    <div class="window" id="window">
       <div class="images" id="images">
         <img
           src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR79Q60vz-swqJZ8XyON6-8CKINfUwGWF0OarGXkVuvIzcT-qti"
@@ -29,6 +29,10 @@
           height=300 width=168
         />
       </div>
+    </div>
+    <div>
+      <button id="previous">上一张</button>
+      <button id="next">下一张</button>
     </div>
     <div id=buttonWrapper style="text-align: center;">
         <button>1</button>
